# springerdl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  https_swap.py  perf_stats.txt  springerdl.spec
src/: CMakeLists.txt  bookdl.c  bookdl.h  springerdl.c  springerdl.h
